--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,15 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version> <!-- Use the latest stable version -->
                 <configuration>
-                    <release>22</release> <!-- Use release to specify Java version -->
+                    <source>22</source>
+                    <target>22</target>
                 </configuration>
+            </plugin>
+            <!-- SonarQube Maven Plugin -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>4.0.0.4121</version> <!-- Specify the latest stable version here -->
             </plugin>
         </plugins>
     </build>
